# SerenityCore

./: .gitignore  CMakeLists.txt  README.md  RevisionData.hpp.in.cmake
CMake/: GenRevision.cmake  Options.cmake  ShowOptions.cmake
CMake/Macros/: AutoCollect.cmake  FindMySQL.cmake  GroupSources.cmake  InterfaceTargetsConfig.cmake
Dependencies/boost/: CMakeLists.txt
Dependencies/mysql/: CMakeLists.txt
Sources/: CMakeLists.txt
Sources/Application/: CMakeLists.txt
Sources/Common/: CMakeLists.txt  CompilerDefines.hpp  Defines.hpp
